# ataraxiadive

./: .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  OBSIDIAN-SETUP.md  README.md  WIKI.md  alembic.ini  coverage.json  docker-compose.yml  fly.toml  index.html  pyproject.toml  requirements.txt  sitemap.xml
.claude/: config.json  settings.json  settings.local.json
.claude/commands/: checkpoint.md  implement-us.md  resume.md
.claude/hooks/: check-session-start.sh  save-session.sh
.claude/plans/: US-ADJ-11.1-plan.md  US-ADJ-11.2-plan.md
.claude/tracking/: INC-2.0-tracking.json  README.md  US-1.2.1-tracking.json  US-1.2.2-tracking.json  US-1.2.3-tracking.json  US-1.2.4-tracking.json  US-1.2.5-tracking.json  US-1.2.6-tracking.json  US-1.4.1-tracking.json  US-1.4.2-tracking.json  US-2.1.1-tracking.json  US-2.1.2-tracking.json  US-2.1.3-tracking.json  US-2.1.4-tracking.json  US-2.2.1-tracking.json  US-2.2.2-tracking.json  US-2.3.1-tracking.json  US-2.4.1-tracking.json  US-2.4.2-tracking.json  US-3.1.1-tracking.json  US-3.1.2-tracking.json  US-3.2.1-tracking.json  US-3.2.2-tracking.json  US-3.2.3-tracking.json  US-3.3.1-tracking.json  US-3.4.1-tracking.json  US-3.4.2-tracking.json  US-3.5.1-tracking.json  US-3.5.2-tracking.json  US-3.5.3-tracking.json  US-4.1.1-tracking.json  US-4.1.2-tracking.json  US-4.1.3-tracking.json  US-4.1.4-tracking.json  US-4.1.5-tracking.json  US-4.1.6-tracking.json  US-4.1.7-tracking.json  US-4.1.8-tracking.json  US-4.2.1-tracking.json  US-4.2.2-tracking.json  (+112 more)
.cm/baselines/: BL-000-pre-codigo.md  BL-001-arquitectura.json  BL-001-sp1-la-performance.md  BL-002.md  BL-003.md  BL-004.md  BL-005-draft.md  BL-006-report.json  BL-006.md  BL-007.md
.githooks/: pre-push
.obsidian/: workspace.json
.work/: AtaraxiaDive - Hallazgos - Validacion.md  analisis-discrepancias-dataset-reales.md  auditoria-docs-post-sp5.md  conversacion.md  notas a.md  notas b.md  portal_torneos_apnea.md  registro-usuarios.md  reporte-estadistico-tracking.md  revision-consistencia.md
.work/formacion/: consideraciones_alcance.docx  consideraciones_alcance.md  demo_modulo1_prompt_vs_speckit.md  extension-seccion-e-alcance.md  extension-seccion-e-propuesta-v2.md  extension-seccion-e-propuesta.md  hallazgos_experimento.md  propuesta_ capacitacion.md  propuesta_extension_resumida.md  propuesta_extension_resumida_v2.md  propuesta_extension_resumida_v3.md  propuesta_extension_tecnica.md  propuesta_is_ia.docx  ~$opuesta_is_ia_v3.docx
.work/revision-sp2/: 01-designreviewer.md  02-analisis-aggregates.md  03-analisis-handlers.md  04-analisis-infra-queries.md  05-revision-solid.md  06-architectanalyst.md  07-issues-consolidados.md
.work/revision-sp3/: 01-designreviewer.md  02-analisis-aggregates.md  03-analisis-handlers.md  04-analisis-infra.md  05-revision-consistencia-sp3.md  05b-revision-solid-sp3.md  06-architectanalyst.md  07-issues-consolidados.md
.work/revision-sp4/: 01-designreviewer.md  02-analisis-bc-notificaciones.md  03-analisis-frontend.md  04-revision-solid.md  05-architectanalyst.md  06-issues-consolidados.md
.work/revision-sp5/: 01-hallazgos-uat-inc-5.1.md  02-hallazgos-aut-inc-5.2.md  03-hallazgos-logica-inscripcion-ap.md  03-hallazgos-uat-inc-5.5.md  04-hallazgos-ux-portal-atleta.md  05-hallazgos-uat-portal-atleta-ap.md  06-estado-validacion-inc-5.6.md  codeguard-hallazgos-pendientes.md  designreviewer-hallazgos-pendientes.md
assets/stylesheets/: ataraxia.css
docs/: BACKLOG-TECNICO.md  CANONICAL-SOURCES.md  PLAN-ADECUACION-DOCUMENTAL.md  POLITICA-MEJORA-DOCUMENTAL.md  README.md  WBS-ATARAXIADIVE.md
docs/adr/: ADR-001-event-sourcing-competencia.md  ADR-002-fastapi-backend.md  ADR-003-offline-first-pwa.md  ADR-004-reglas-como-datos.md  ADR-005-bounded-contexts-ddd-estrategico.md  ADR-006-estructura-bc-first.md  ADR-007-sqlite-persistencia-bc.md  ADR-008-event-store-sqlite.md  ADR-009-migraciones-por-bc.md  ADR-010-docker-produccion-cloud-run.md  ADR-011-structlog-logging.md  ADR-012-rfc7807-errores-http.md  ADR-013-exception-management.md  ADR-014-penalizaciones-acumulables.md  ADR-015-categoria-shared.md  ADR-015-dexie-indexeddb-frontend.md  ADR-016-resend-email-provider.md  ADR-017-notificaciones-event-sourcing.md  ADR-018-hash-sha256-auditoria.md  ADR-019-politica-contrasenas.md  ADR-020-modelo-usuarios-roles.md  ADR-021-fly-io.md  ADR-022-categoria-shared.md
docs/architecture/: 01-system-context.md  02-container-view.md  03-bounded-contexts.md  10-bc-competencia.md  11-bc-torneo.md  12-bc-registro.md  13-bc-resultados.md  14-bc-identidad.md  15-bc-notificaciones.md  20-context-map-integrations.md  30-runtime-interactions.md  40-cross-cutting-concerns.md  50-offline-sync.md  60-deployment-view.md  README.md  STATUS.md
docs/contexto/: ANALISIS-ATARAXIADIVE.md  ANALISIS-DISCREPANCIAS-DATASET-BA2025.md  ANALISIS-IEDD.md  ANALISIS-INTEGRACION-CLAUDE-DEV-KIT.md  ANALISIS-SOFTWARE-LIMPIO.md  APRENDIZAJES-IEDD.md  ARTEFACTOS-WORKFLOW.md  ATARAXIADIVE-CONTEXT.md  DECISION-EVENT-STORMING.md  HALLAZGOS-VALIDACION-UAT.md  HITO-1-ADHERENCIA-IEDD-FASE0.md  HITO-10-PERFORMANCES-AP-PORT-DOMINIO-PURO.md  HITO-11-QUALITY-GATE-COMO-CATALIZADOR-COLABORATIVO.md  HITO-12-GATES-TEXTO-VS-HERRAMIENTA.md  HITO-13-SP-ADJ-DEUDA-TECNICA-COMO-ETAPA-FORMAL.md  HITO-14-ANALISIS-METODOLOGIA-Y-ESTRUCTURA.md  HITO-15-CQRS-PROYECCIONES-EMERGEN-DE-ES.md  HITO-16-SECUENCIALIDAD-PRESCRIPTIVA-PIPELINE.md  (+28 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
manual/: mkdocs.yml
portal-atleta/: index.html
portal-juez/: index.html
portal-organizador/: index.html
portal-publico/: index.html
scripts/: extract_buenos_aires_2025_test_data.py  generate_participantes_por_categoria.py  reset_uat_4_4_fixture.py  seed_test_users.py  setup_us_4_3_1_fixture.py  setup_us_4_3_2_fixture.py  setup_us_4_3_3_fixture.py
search/: search_index.json
src/: app.py
tests/: conftest.py
tu-cuenta/: index.html
wiki/: LLM-WIKI-DIAGNOSTICO-Y-PLAN.md  guia-uso.md  index.md  log.md
(+2256 files in other folders)
