[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ataraxiadive"
version = "0.0.0"
description = "Plataforma de gestión de torneos de apnea"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "pre-commit>=3.7.0",
    "quality-agents",
]

[tool.uv.sources]
quality-agents = { git = "https://github.com/vvalotto/software_limpio" }

# ── Black ──────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── isort ──────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100

# ── Ruff ───────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

# ── mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

# ── pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

# ── Coverage ───────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/*/api/*",    # API layer de cada BC — cubierta por tests de integración
    "src/app.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ── CodeGuard (Software Limpio) ────────────────────────────────────────────
[tool.codeguard]
min_pylint_score = 8.0
max_complexity = 10
paths = [
    "src/competencia", "src/torneo", "src/registro",
    "src/resultados", "src/identidad", "src/notificaciones",
    "src/shared",
]

# ── DesignReviewer (Software Limpio) ──────────────────────────────────────
[tool.designreviewer]
paths = ["src"]
check_hexagonal = true
# Patrón BC-first: domain/ dentro de cada BC no puede importar infrastructure/ ni api/
forbidden_imports_in_domain = ["infrastructure", "api", "fastapi", "sqlalchemy"]

# ── ArchitectAnalyst (Software Limpio) ────────────────────────────────────
[tool.architectanalyst]
paths = ["src"]
history_db = "quality/reports/architectanalyst/architecture.db"

[tool.architectanalyst.layers]
domain = ["*/domain"]
application = ["*/application"]
infrastructure = ["*/infrastructure"]
api = ["*/api"]
