[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ataraxiadive"
version = "0.0.0"
description = "Plataforma de gestión de torneos de apnea"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "pre-commit>=3.7.0",
    "quality-agents",
]

[tool.uv.sources]
quality-agents = { git = "https://github.com/vvalotto/software_limpio" }

# ── Black ──────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── isort ──────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100

# ── Ruff ───────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

# ── mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

# ── pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

# ── Coverage ───────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/*/api/*",    # API layer de cada BC — cubierta por tests de integración
    "src/app.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ── CodeGuard (Software Limpio) ────────────────────────────────────────────
[tool.codeguard]
min_pylint_score = 8.0
check_complexity = true
max_cyclomatic_complexity = 10

# ── DesignReviewer (Software Limpio) ──────────────────────────────────────
# Nota: paths/check_hexagonal/forbidden_imports_in_domain no son campos de
# DesignReviewerConfig — pasarlos en esta sección causa TypeError silencioso y
# la config cae a defaults. Sólo incluir campos del dataclass aquí.
# CLI flags: designreviewer src/ (paths se pasa como argumento)
[tool.designreviewer]
# CBO elevado: aggregates DDD acoplan legitimamente a sus VOs, eventos y puertos.
# US-1.2.1: max_cbo=10. US-1.2.2: Performance+AtletaLlamado → CBO=11, sube a 12.
# US-1.2.3: Performance+ResultadoRegistrado → CBO=13. Sube a 14.
# US-1.2.4: +TipoTarjeta +TarjetaAsignada → CBO=15. Sube a 17 para US-1.2.4-1.2.6 completo.
max_cbo = 17
# WMC elevado: Performance crece con cada US de Inc 1.2 (un método por comando de dominio).
# US-1.2.3: WMC=21. US-1.2.4: asignar_tarjeta() → WMC=27. Sube a 36 para US-1.2.4-1.2.6 completo.
max_wmc = 36

# ── ArchitectAnalyst (Software Limpio) ────────────────────────────────────
[tool.architectanalyst]
paths = ["src"]
history_db = "quality/reports/architectanalyst/architecture.db"

[tool.architectanalyst.layers]
domain = ["*/domain"]
application = ["*/application"]
infrastructure = ["*/infrastructure"]
api = ["*/api"]
